fix: adds support for dark mode icons from generate-assets

--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -91,6 +91,13 @@ button {
         center top;
     background-size: 100%;
 }
+@media (prefers-color-scheme: dark) {
+    :not(.override-light) .app {
+        background: url('../assets/images/background-illustration-dark.svg')
+            no-repeat center top;
+        background-size: 100%;
+    }
+}
 
 .content {
     position: relative;
@@ -460,7 +467,7 @@ p + p {
 .pageLogin__illustration {
     display: block;
     margin: 0 auto;
-    max-width: 100%;
+    width: 100%;
 }
 .pageLogin__infoItem {
     display: flex;
@@ -546,6 +553,12 @@ table {
     background: url('../assets/images/travelcard-help-icons.svg') left center
         no-repeat;
     margin-bottom: calc(2 * var(--spacings-xLarge));
+}
+@media (prefers-color-scheme: dark) {
+    :not(.override-light) .onboarding__travelCard__input {
+        background: url('../assets/images/travelcard-help-icons-dark.svg') left
+            center no-repeat;
+    }
 }
 
 @media (max-width: 600px) {
